repair in width and gap ang border in small screen in mega menu in header

--- a/css/sass/import/_header.scss
+++ b/css/sass/import/_header.scss
@@ -9,7 +9,7 @@ header {
     @include m.center-flex();
     flex-wrap: wrap;
     -moz-column-gap: 40px;
-         column-gap: 40px;
+    column-gap: 40px;
     padding-right: 0;
     position: relative;
     // background-color: #eee;
@@ -18,7 +18,7 @@ header {
       & {
         padding: 0 15px;
         -moz-column-gap: 220px;
-             column-gap: 220px;
+        column-gap: 220px;
       }
     }
 
@@ -108,12 +108,12 @@ header {
         a {
           width: 140px;
         }
-        .mega-menu {
+        ul.mega-menu {
           display: flex;
           flex-wrap: nowrap;
           justify-content: space-between;
           width: 100%;
-          gap: 20px;
+          column-gap: 20px;
           padding: 30px;
           background-color: white;
           position: absolute;
@@ -134,6 +134,7 @@ header {
           @media (max-width: 768px) {
             flex-wrap: wrap;
             font-size: 10px;
+            width: 100%;
           }
 
           &::before {
@@ -165,8 +166,11 @@ header {
           }
 
           ul {
+            display: flex;
+            flex-direction: column;
             width: 100%;
             a {
+              width: 100%;
               display: block;
               min-width: 250px;
               font-size: 16pt;
@@ -184,7 +188,8 @@ header {
                 padding: 5px 15px;
                 i {
                   font-weight: 400;
-                  &.fa-server, &.fa-percent {
+                  &.fa-server,
+                  &.fa-percent {
                     font-weight: 700;
                   }
                 }
@@ -204,6 +209,13 @@ header {
                 &:hover {
                   &:before {
                     transform: translate(0, 0);
+                  }
+                }
+              }
+              &:last-of-type {
+                @media (max-width: 767.98px) {
+                  li {
+                    border-bottom: 1px solid $prag-color;
                   }
                 }
               }
